--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "noFallthroughCasesInSwitch": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
+    "typeRoots": ["./src/types"],
     "paths": {
       "@foundation/*": ["./src/*"]
     }
